rubocop/examples/good/style_RedundantException.rb
# Don't specify RuntimeError explicitly in the two argument version of raise.

# good - signals a RuntimeError by default
raise 'message'
