rubocop/examples/bad/style_RedundantException.rb
# Don't specify RuntimeError explicitly in the two argument version of raise.

# bad
raise RuntimeError, 'message'
